Moves everything from container CheckoutDisplay into component SummaryBox for consistency
Co-authored-by: Daniel https://github.com/parkdaniel731
Co-authored-by: Cyrux https://github.com/cyduckk
Co-authored-by: George https://github.com/ggreer91
Co-authored-by: John https://github.com/jayoo0621

--- a/client/styles.css
+++ b/client/styles.css
@@ -111,13 +111,13 @@ button:hover {
 
 /* CHECKOUT PAGE */
 
-.checkoutpage {
+.summarybox {
   display: flex;
   justify-content: center;
   font-family: 'Montserrat', sans-serif;
 }
 
-.checkoutpage tr #total {
+.summarybox tr #total {
   font-weight: bold;
   font-size: 30px;
   font-family: 'Montserrat', sans-serif;
